--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "autoinspector-node",
+  "name": "autoinspector",
   "version": "1.0.0",
   "description": "Autoinspector API wrapper",
   "main": "dist/index.js",
