--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "dependencies": {
     "axios": "^0.25.0",
     "isomorphic-form-data": "^2.0.0",
+    "tsc": "^2.0.4",
     "typescript": "^4.5.4"
   },
   "devDependencies": {
