--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
-    "test": "test",
+    "test": "jest --config ./jest.config.js",
     "build": "tsc"
   },
   "repository": {
@@ -31,6 +31,7 @@
     "typescript": "^4.5.4"
   },
   "devDependencies": {
+    "@types/jest": "^27.5.0",
     "@types/node": "^17.0.10",
     "@typescript-eslint/eslint-plugin": "^5.10.0",
     "@typescript-eslint/parser": "^5.10.0",
@@ -39,6 +40,8 @@
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-import": "^2.25.4",
     "eslint-plugin-prettier": "^4.0.0",
-    "prettier": "^2.5.1"
+    "jest": "^27.5.1",
+    "prettier": "^2.5.1",
+    "ts-jest": "^28.0.0"
   }
 }
