--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -29,8 +29,17 @@ jobs:
           name: Release ${{ steps.tag_version.outputs.new_tag }}
           body: ${{ steps.tag_version.outputs.changelog }}
 
+      - name: Set Versions
+        uses: actions/github-script@v4
+        id: set_version
+        with:
+          script: |
+            const version = '${{ steps.tag_version.outputs.new_tag }}'
+            const noDash = version.replace('v', '')
+            core.setOutput('noDash', noDash)
+
       - name: Publish to NPM
         uses: JS-DevTools/npm-publish@v1
         with:
           token: ${{ secrets.NPM_TOKEN }}
-          tag: ${{ steps.tag_version.outputs.new_tag }}
+          tag: ${{ steps.set_version.outputs.noDash }}
