disable check version

--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -43,3 +43,4 @@ jobs:
         with:
           token: ${{ secrets.NPM_TOKEN }}
           tag: ${{ steps.set_version.outputs.noDash }}
+          check-version: false
