--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -16,31 +16,8 @@ jobs:
           npm install
           npm test
 
-      - name: Bump version and push tag
-        id: tag_version
+      - name: Start release pipeline
         uses: mathieudutour/github-tag-action@v6.0
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Create a GitHub release
-        uses: ncipollo/release-action@v1
-        with:
-          tag: ${{ steps.tag_version.outputs.new_tag }}
-          name: Release ${{ steps.tag_version.outputs.new_tag }}
-          body: ${{ steps.tag_version.outputs.changelog }}
-
-      - name: Set Versions
-        uses: actions/github-script@v4
-        id: set_version
-        with:
-          script: |
-            const version = '${{ steps.tag_version.outputs.new_tag }}'
-            const noDash = version.replace('v', '')
-            core.setOutput('noDash', noDash)
-
-      - name: Publish to NPM
-        uses: JS-DevTools/npm-publish@v1
-        with:
-          token: ${{ secrets.NPM_TOKEN }}
-          tag: ${{ steps.set_version.outputs.noDash }}
-          check-version: false
+        run: |
+          npm ci
+          npm run semantic-release
