--- a/package.json
+++ b/package.json
@@ -1,16 +1,18 @@
 {
   "name": "autoinspector",
-  "version": "1.0.4",
+  "version": "0.0.0-development",
   "description": "Autoinspector API wrapper",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
     "test": "jest --config ./jest.config.js",
-    "build": "tsc"
+    "build": "tsc",
+    "semantic-release": "semantic-release",
+    "commit": "git-cz"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/autoinspector-global/autoinspector-node.git"
+    "url": "https://github.com/autoinspector-global/autoinspector-node.git"
   },
   "keywords": [
     "inspections",
@@ -42,6 +44,7 @@
     "eslint-plugin-prettier": "^4.0.0",
     "jest": "^27.5.1",
     "prettier": "^2.5.1",
-    "ts-jest": "^28.0.0"
+    "ts-jest": "^28.0.0",
+    "semantic-release": "^19.0.2"
   }
 }
