ci(publish): compile typescript code in order to publish dist folder

--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -16,8 +16,12 @@ jobs:
           npm install
           npm test
 
-      - name: Start release pipeline
+      - name: compile typescript code
+        run: npm run build
+
+      - name: Publish package version
         env:
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
         run: |
+          npm ci
           npm publish
