--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
-    "test": "jest --config ./jest.config.js",
+    "test": "./node_modules/.bin/jest --config ./jest.config.js",
+    "test:watch": "jest --watch --runInBand --detectOpenHandles",
     "build": "tsc",
     "semantic-release": "semantic-release",
     "commit": "git-cz"
@@ -37,6 +38,7 @@
     "@typescript-eslint/eslint-plugin": "^5.10.0",
     "@typescript-eslint/parser": "^5.10.0",
     "cz-conventional-changelog": "^3.3.0",
+    "dotenv": "^16.0.0",
     "eslint": "^8.7.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-prettier": "^8.3.0",
