--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,5 +10,5 @@
     "outDir": "./dist",
     "resolveJsonModule": true
   },
-  "exclude": ["node_modules", "tests", "dist", "./dist"]
+  "exclude": ["node_modules", "tests", "dist"]
 }
