--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "autoinspector",
-  "version": "2.0.2",
+  "version": "2.0.3-beta.2",
   "description": "Autoinspector API wrapper",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
