--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,7 +1,7 @@
 name: Publish Package to npmjs
 on:
   push:
-    branches: [stage]
+    branches: [master]
     paths:
       - 'package.json'
 jobs:
